--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -1,13 +1,13 @@
 <table class="table table-striped table-hover">
     <thead>
       <tr>
-        <th scope="col">ID <button disabled type="button" class="btn btn-outline-dark btn-sm">\/</button></th>
-        <th scope="col">Name <button disabled type="button" class="btn btn-outline-dark btn-sm">\/</button></th>
-        <th scope="col">Surename <button disabled type="button" class="btn btn-outline-dark btn-sm">\/</button></th>
+        <th scope="col">ID <button disabled type="button" class="btn btn-outline-dark btn-sm">V</button></th>
+        <th scope="col">Name <button disabled type="button" class="btn btn-outline-dark btn-sm">V</button></th>
+        <th scope="col">Surename <button disabled type="button" class="btn btn-outline-dark btn-sm">V</button></th>
         <th scope="col">Phon number 
-          <button type="button" disabled (click)="sortByPhone()" class="btn btn-outline-dark btn-sm">\/</button>
+          <button type="button" disabled (click)="sortByPhone()" class="btn btn-outline-dark btn-sm">V</button>
         </th>
-        <th scope="col">Email <button type="button" disabled class="btn btn-outline-dark btn-sm">\/</button></th>
+        <th scope="col">Email <button type="button" disabled class="btn btn-outline-dark btn-sm">V</button></th>
       </tr>
     </thead>
     <tbody>
@@ -18,7 +18,8 @@
         <td>{{item.phone}}</td>
         <td>{{item.email}}</td>
         <td>
-            <button class="btn btn-seccess" (click)="onUpdatePersonData(item.id)">Edit</button>
+            <!-- <button class="btn btn-seccess" (click)="onUpdatePersonData(item.id)">Edit</button> -->
+            <button class="btn btn-primary" routerLink="update/{{item.id}}">Edit</button>
             <button class="btn btn-danger" (click)="onRemovePersonData(item.id)">Delete</button>
         </td>
       </tr>
